# C-Lang

./: .gitignore  README.md  pch.h
Console/codeit/: CMakeLists.txt  build.bat
Console/codeit/src/: CMakeLists.txt  Editor.hpp  LinkedList.hpp  main.cpp  rlutil.h
Console/kdb/: CMakeLists.txt  CMakePresets.json  build-ENG.bat  build-UA.bat
Console/kdb/bat/: info-kostenuksoft-ENG.bat  info-kostenuksoft-UA.bat
Console/kdb/codeit/: CMakeLists.txt
Console/kdb/codeit/src/: Editor.hpp  Framework.hpp  wmain.cpp
Console/kdb/import/: movies.csv
Console/kdb/src/: CMakeLists.txt  Criteria.hpp  Framework.hpp  Menu.hpp  Movie.hpp  MovieDatabase.hpp  MovieException.hpp  Schema.hpp  Utils.hpp  criteria.cpp  main.cpp  menu.cpp  movie.cpp  movie_db.cpp  rlutil.h  schema.cpp
DirectX/: .gitignore
MFC/: Resource.h  appver.hpp  framework.h
WinAPI/codeit/: codeit-WAPI.sln  codeit-WAPI.vcxproj  codeit-WAPI.vcxproj.filters  codeit-winAPI.vcxproj  codeit-winAPI.vcxproj.filters
WinAPI/codeit/hpp/: Components.hpp  Modules.hpp  Properties.hpp  pch.hpp
WinAPI/codeit/src/: modules.cpp  winMain.cpp
kdb/src/bat/: info-kostenuksoft-ENG.bat
